Se establecio la ventana de configuracion unicamente para la vista inicial/index, se creo la ruta para guardar y leer la configuracion desde un JSON Se comenzo la configuracion de tablas para hacerlas editables

--- a/views/alumno/grid-alumnos.hbs
+++ b/views/alumno/grid-alumnos.hbs
@@ -51,8 +51,8 @@
                         <thead>
                         <tr>
                             <th data-field="estado" data-sorteable="false" data-checkbox="true"></th>
-                            <th data-field="clave" data-sorteable="false">No. Control</th>
-                            <th data-field="nombre" data-sorteable="true">Nombre</th>
+                            <th data-field="clave" data-sorteable="false" data-editable="true">No. Control</th>
+                            <th data-field="nombre" data-sorteable="true" data-editable="true">Nombre</th>
                         </tr>
                         </thead>
                         <tbody>
