--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,19 +10,18 @@
     <link href="/css/bootstrap-icons.css" rel="stylesheet" type="text/css">
     <link href="/css/font-awesome.css" rel="stylesheet" type="text/css">
     <link href="/js/bootstrap-table.css" rel="stylesheet" type="text/css">
+    <script src="/js/extensions/editable/bootstrap-table-editable.js"></script>
     <script src="/js/bootstrap-table.js"></script>
     <script src="/js/bootstrap.bundle.js"></script>
     <script src="/js/popover-helper.js"></script>
     <script src="/js/bs-custom-file-input.js"></script>
 
+
+
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <div class="col">
                 <a class="bi bi-house-fill" href="/" title="Inicio"></a>
-            </div>
-            <div class="col" align="right">
-                <a type="button" class="bi bi-gear-fill" data-toggle="modal" data-target="#configuracionModal"
-                   title="Configuración"></a>
             </div>
 
         </div>
