--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,16 +2,23 @@
 <div class="container-fluid p-2  h-100" style="height: max-content">
     <ul class="nav nav-tabs ">
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" title="Muestra todos los grupos independientemente del estado." href="/">Todos</a>
+            <a class="nav-link active" aria-current="page"
+               title="Muestra todos los grupos independientemente del estado." href="/">Todos</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/filtro/1" title="Muestra únicamente los grupos con estado activo.">Activos</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/filtro/0" title="Muestra únicamente los grupos con estado inactivo.">Completados</a>
+            <a class="nav-link" href="/filtro/0"
+               title="Muestra únicamente los grupos con estado inactivo.">Completados</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/filtro/2"  title="Muestra los grupos enviados a la papelera de reciclaje."><i class="bi bi-trash2-fill"></i></a>
+            <a class="nav-link" href="/filtro/2" title="Muestra los grupos enviados a la papelera de reciclaje."><i
+                    class="bi bi-trash2-fill"></i></a>
+        </li>
+        <li class="nav-item">
+            <a type="button" class="nav-link bi bi-gear-fill" data-toggle="modal" data-target="#configuracionModal"
+               title="Configuración"></a>
         </li>
     </ul>
 
@@ -25,9 +32,10 @@
                     {{#iflogico dataValues.estado '!=' "2"}}
                         <div class="card-header d-flex flex-row-reverse">
                             <a class="bi bi-trash-fill " align="right" data-toggle="modal"
-                               data-target="#eliminarGrupo{{dataValues.id}}"  title="Mover grupo a la papelera de reciclaje."></a>
+                               data-target="#eliminarGrupo{{dataValues.id}}"
+                               title="Mover grupo a la papelera de reciclaje."></a>
                             <a class="bi bi-pencil-square " align="right" data-toggle="modal"
-                               data-target="#editarGrupo{{dataValues.id}}"  title="Editar los atributos del grupo."></a>
+                               data-target="#editarGrupo{{dataValues.id}}" title="Editar los atributos del grupo."></a>
                         </div>
                     {{/iflogico}}
 
@@ -41,14 +49,16 @@
                     <div class="card-footer">
                         <div class="col" align="right">
                             {{#iflogico dataValues.estado '!=' "2"}}
-                                <a href="/grupo-inicio/{{dataValues.id}}" class="btn btn-primary"  title="Mostrar la información relacionada con el grupo.">Ver</a>
+                                <a href="/grupo-inicio/{{dataValues.id}}" class="btn btn-primary"
+                                   title="Mostrar la información relacionada con el grupo.">Ver</a>
                             {{/iflogico}}
                             {{#iflogico dataValues.estado '==' "2"}}
 
                                 <a type="button" data-toggle="modal" data-target="#restaurarGrupo{{dataValues.id}}"
-                                   class="btn btn-info"  title="Restaura el grupo enviándolo fuera de la papelera.">Restaurar</a>
+                                   class="btn btn-info" title="Restaura el grupo enviándolo fuera de la papelera.">Restaurar</a>
                                 <a type="button" data-toggle="modal" data-target="#eliminarGrupoPerm{{dataValues.id}}"
-                                   class="btn btn-danger"  title="Eliminar permanentemente el grupo junto con los datos relacionados del mismo.">Eliminar</a>
+                                   class="btn btn-danger"
+                                   title="Eliminar permanentemente el grupo junto con los datos relacionados del mismo.">Eliminar</a>
 
                             {{/iflogico}}
                         </div>
@@ -178,7 +188,8 @@
                             <h5 class="card-title">Agregar nuevo grupo</h5>
                         </div>
                         <div class="row justify-content-md-center align-items-center">
-                            <a class="btn btn-success rounded-circle " href="/grupo/wizard-crear-grupo" title="Agregar un nuevo grupo.">+</a>
+                            <a class="btn btn-success rounded-circle " href="/grupo/wizard-crear-grupo"
+                               title="Agregar un nuevo grupo.">+</a>
                         </div>
                     </div>
                 </div>
