Agregamos la ruta estatica de x-editable-bs4

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,14 +9,20 @@
     <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="/css/bootstrap-icons.css" rel="stylesheet" type="text/css">
     <link href="/css/font-awesome.css" rel="stylesheet" type="text/css">
+    <link href="/js/bootstrap4-editable/css/bootstrap-editable.css" type="text/css">
     <link href="/js/bootstrap-table.css" rel="stylesheet" type="text/css">
-    <script src="/js/extensions/editable/bootstrap-table-editable.js"></script>
-    <script src="/js/bootstrap-table.js"></script>
+
+    <script src="/js/jquery.js"></script>
+    <script src="/js/popper.min.js"></script>
+    <script src="/js/popper-utils.min.js"></script>
     <script src="/js/bootstrap.bundle.js"></script>
+    <script src="/js/bootstrap4-editable/js/bootstrap-editable.js"></script>
+    <script src="/js/bootstrap-table.js"></script>
+    <script src="/js/extensions/editable/bootstrap-table-editable.js"></script>
+
+
     <script src="/js/popover-helper.js"></script>
     <script src="/js/bs-custom-file-input.js"></script>
-
-
 
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
