Agregada la funcionalidad de editar tabla

--- a/views/alumno/grid-alumnos.hbs
+++ b/views/alumno/grid-alumnos.hbs
@@ -47,7 +47,7 @@
                 <div class="col-auto">
                     <table id="table" data-toggle="table" data-toolbar="#toolbar" data-click-to-select="true"
                            data-search="true"
-                           data-advanced-search="true" data-filter-control="true" name="table">
+                           data-advanced-search="true" data-filter-control="true" name="table" data-editable="true">
                         <thead>
                         <tr>
                             <th data-field="estado" data-sorteable="false" data-checkbox="true"></th>
