--- a/views/alumno/grid-alumnos.hbs
+++ b/views/alumno/grid-alumnos.hbs
@@ -45,7 +45,7 @@
             <input type="hidden" id="valorTabla" name="valorTabla" value="{{listaFormateada}}">
             <div class="row-cols-1 ">
                 <div class="col-auto">
-                    <table id="table" data-toggle="table" data-toolbar="#toolbar" data-click-to-select="true"
+                    <table id="table" data-toggle="table" data-toolbar="#toolbar" data-click-to-select="false"
                            data-search="true"
                            data-advanced-search="true" data-filter-control="true" name="table" data-editable="true">
                         <thead>
@@ -72,14 +72,14 @@
             <input type="hidden" id="valorTabla" name="valorTabla">
             <div class="row-cols-1 ">
                 <div class="col-auto">
-                    <table id="table" data-toggle="table" data-toolbar="#toolbar" data-click-to-select="true"
+                    <table id="table" data-toggle="table" data-toolbar="#toolbar" data-click-to-select="false"
                            data-search="true"
                            data-advanced-search="true" data-filter-control="true" name="table">
                         <thead>
                         <tr>
                             <th data-field="estado" data-sorteable="false" data-checkbox="true"></th>
-                            <th data-field="clave" data-sorteable="false">No. Control</th>
-                            <th data-field="nombre" data-sorteable="true">Nombre</th>
+                            <th data-field="clave" data-sorteable="false" data-editable="true">No. Control</th>
+                            <th data-field="nombre" data-sorteable="true" data-editable="true">Nombre</th>
                         </tr>
                         </thead>
                         <tbody>
