Creada la ruta para calificar individualmente

--- a/views/grupo/vista-grupo-actividades.hbs
+++ b/views/grupo/vista-grupo-actividades.hbs
@@ -199,9 +199,9 @@
                     Seleccione la forma en la que desea calificar la actividad.
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary">Individual</button>
-                    <button type="button" class="btn btn-primary">Por equipo</button>
+                    <a type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</a>
+                    <a type="button" class="btn btn-primary" href="/actividad/calificar-individual/{{idgrupo}}/{{idtema}}/{{actividad.dataValues.id}}">Individual</a>
+                    <a type="button" class="btn btn-primary">Por equipo</a>
                 </div>
             </div>
         </div>
