Agregada la funcion de calificar individualmente.

--- a/views/grupo/vista-grupo-alumnos.hbs
+++ b/views/grupo/vista-grupo-alumnos.hbs
@@ -28,8 +28,8 @@
     <!-- Contenido de la vista -->
     <div class="row m-2 p-0">
         <div class="col-5">
-            <div class="container overflow-auto">
-                <div class="list-group">
+            <div class="container">
+                <div class="list-group overflow-auto">
                     {{#each alumnos}}
                         <a type="button" class="list-group-item list-group-item-action" aria-current="true"
                            href="/grupo/alumnos/{{../idgrupo}}/{{dataValues.clave}}">
