--- a/views/actividad/actividad-calificar-individual.hbs
+++ b/views/actividad/actividad-calificar-individual.hbs
@@ -1,33 +1,41 @@
-<title>Calificar</title>
+<title>Calificar - {{actividad.dataValues.nombre}}</title>
 
 <div class="container bg-light m-100">
     <div class="row m-2 p-3">
-        <h1 class="display-4">Calificar Actividad</h1>
+        <h2 class="display-4">Calificar Actividad</h2>
     </div>
-    <div class="row">
-        <form>
-            <input type="hidden" id="valorTabla" name="valorTabla" value="{{listaFormateada}}">
-            <div class="row-cols-1 ">
-                <div class="col-auto">
-                    <table id="table" data-toggle="table" data-toolbar="#toolbar" data-click-to-select="false"
-                           data-search="true"
-                           data-advanced-search="true" data-filter-control="true" name="table" data-editable="true">
-                        <thead>
-                        <tr>
-                            <th data-field="estado" data-sorteable="false" data-checkbox="true"></th>
-                            <th data-field="clave" data-sorteable="false" data-editable="true">No. Control</th>
-                            <th data-field="nombre" data-sorteable="true" data-editable="true">Nombre</th>
-                            <th data-field="calificacion" data-sorteable="true" data-editable="true">Calificación</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        </tbody>
-                    </table>
-                </div>
+    <div class="row-cols-1  d-flex flex-row-reverse">
+        <div class="col-auto d-flex flex-row-reverse p-3">
+            <div id="toolbar">
+                <h4>{{actividad.dataValues.nombre}}</h4>
+                <h6>Valor de la actividad: {{actividad.dataValues.valor}}</h6>
+                <p>{{actividad.dataValues.descripcion}}</p><br>
             </div>
+        </div>
+    </div>
+    <div class="rows-cols-1">
+        <form action="/actividad/calificar-individual/{{idgrupo}}/{{idtema}}/{{actividad.dataValues.id}}?_method=PUT" method="POST"
+              novalidate>
+            <input type="hidden" name="_method" value="PUT">
+            <input type="hidden" id="valorTabla" name="valorTabla" value="{{listaFormateada}}">
+            <div class="col-auto">
+                <table id="table" data-toggle="table" data-toolbar="#toolbar" data-click-to-select="false"
+                       data-search="true"
+                       data-search-text="" data-filter-control="true" name="table" data-editable="true">
+                    <thead>
+                        <th data-field="clave" data-sorteable="false">No. Control</th>
+                        <th data-field="nombre" data-sorteable="true">Nombre</th>
+                        <th data-field="calificacion" data-sorteable="true" data-editable="true" type="number">Calificación</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+
             <div class="row p-3 d-flex flex-row-reverse">
                 <button class="btn btn-primary" type="submit" id="finalizar">Finalizar</button>
-                <a class="btn btn-danger" href="">Cancelar</a>
+                <a class="btn btn-danger" href="/grupo/actividades/{{idgrupo}}/{{idtema}}/{{actividad.dataValues.id}}">Cancelar</a>
             </div>
         </form>
     </div>
