Agregada la opción de editar elementos una vez añadidos a la tabla.

--- a/views/actividad/actividad-nuevo.hbs
+++ b/views/actividad/actividad-nuevo.hbs
@@ -56,10 +56,10 @@
                     <thead>
                     <tr>
                         <th data-field="estado" data-sorteable="false" data-checkbox="true"></th>
-                        <th data-field="nombreCol" data-sorteable="false">Nombre</th>
-                        <th data-field="valorCol" data-sorteable="false">Valor</th>
-                        <th data-field="tipoCol" data-sorteable="true">Tipo</th>
-                        <th data-field="descripcionCol" data-sorteable="false">Descripción</th>
+                        <th data-field="nombreCol" data-sorteable="false" data-editable="true">Nombre</th>
+                        <th data-field="valorCol" data-sorteable="false" data-editable="true">Valor</th>
+                        <th data-field="tipoCol" data-sorteable="true" >Tipo</th>
+                        <th data-field="descripcionCol" data-sorteable="false" data-editable="true">Descripción</th>
                     </tr>
                     </thead>
                     <tbody>
