La edición del campo calificacion ahora solamente acepta datos de tipo numero.

--- a/views/actividad/actividad-calificar-individual.hbs
+++ b/views/actividad/actividad-calificar-individual.hbs
@@ -25,7 +25,7 @@
                     <thead>
                         <th data-field="clave" data-sorteable="false">No. Control</th>
                         <th data-field="nombre" data-sorteable="true">Nombre</th>
-                        <th data-field="calificacion" data-sorteable="true" data-editable="true" type="number">Calificación</th>
+                        <th data-field="calificacion" data-sorteable="true" data-editable="true" data-editable-type="number" data-editable-min="0"  data-editable-max="100">Calificación</th>
                     </tr>
                     </thead>
                     <tbody>
