--- a/views/calificacion/vista-grupo-calificaciones.hbs
+++ b/views/calificacion/vista-grupo-calificaciones.hbs
@@ -24,7 +24,8 @@
                 Calificaciones</a>
         </li>
     </ul>
-    <div class="row">
+<div class="container-fluid">
+    <div class="row vh-100">
         <nav id="sideBar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar">
             <div class="sidebar-sticky pt-3">
                 <ul class="nav flex-column">
@@ -48,16 +49,16 @@
                 <input type="hidden" id="valorTabla" name="valorTabla" value="{{listaFormateada}}">
                 <table id="table" data-toggle="table" data-toolbar="#toolbar" data-click-to-select="true"
                        data-search="true"
-                       data-advanced-search="true" data-filter-control="true" name="table">
+                       data-advanced-search="true" data-filter-control="true" name="table" >
                     <thead>
                     <tr>
-                        <th data-field="clave" data-sorteable="false">Clave</th>
-                        <th data-field="nombre" data-sorteable="false">Nombre</th>
+                        <th data-field="clave" data-sorteable="false" class="column">Clave</th>
+                        <th data-field="nombre" data-sorteable="false" class="column">Nombre</th>
 
                         {{#each actividades}}
-                            <th data-field="calificaciones.{{@index}}">{{dataValues.nombre}}: {{dataValues.valor}}</th>
+                            <th data-field="calificaciones.{{@index}}" class="column">{{dataValues.nombre}}: {{dataValues.valor}}</th>
                         {{/each}}
-                        <th data-field="califinal">Calif. Final</th>
+                        <th data-field="califinal" class="column">Calif. Final</th>
                     </tr>
                     </thead>
                     <tbody>
