--- a/views/calificacion/vista-grupo-calificaciones.hbs
+++ b/views/calificacion/vista-grupo-calificaciones.hbs
@@ -1,4 +1,4 @@
-<div class="container-fluid p-2 bg-light">
+<title>{{asignatura}} {{clave}} - Calificación - Seguimiento de Estudiantes</title>
     <!-- Barra de navegación -->
     <ul class="nav nav-tabs">
         <li class="nav-item">
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <!-- Contenido de la vista -->
-            <div class="row-cols-1" >
+            <div class="row-cols-1 pre-scrollable vh-100 min-vh-100" >
                 <input type="hidden" id="valorTabla" name="valorTabla" value="{{listaFormateada}}">
                 <table id="table" data-toggle="table" data-toolbar="#toolbar" data-click-to-select="true"
                        data-search="true"
