Se programó la vista de calificaciones con su respectivo controlador.

--- a/views/tema/tema-nuevo.hbs
+++ b/views/tema/tema-nuevo.hbs
@@ -48,16 +48,16 @@
                         <div class="col">
                             <label for="tipoBox" class="form-label">Categoría</label>
                             <select class="custom-select" name="tipoBox" id="tipoBox" value=1>
-                                <option value="1">Investigación</option>
-                                <option value="2">Presentación</option>
-                                <option value="3">Proyecto</option>
-                                <option value="4">Reporte / Práctica</option>
-                                <option value="5">Resumen</option>
-                                <option value="6">Mapa Conceptual</option>
-                                <option value="7">Cuadro Sinoptico</option>
-                                <option value="8">Mapa Mental</option>
-                                <option value="9">Ejercicios</option>
-                                <option value="10">Otros</option>
+                                <option value="Investigación">Investigación</option>
+                                <option value="Presentación">Presentación</option>
+                                <option value="Proyecto">Proyecto</option>
+                                <option value="Reporte / Práctica">Reporte / Práctica</option>
+                                <option value="Resumen">Resumen</option>
+                                <option value="Mapa Conceptual">Mapa Conceptual</option>
+                                <option value="Cuadro Sinoptico">Cuadro Sinoptico</option>
+                                <option value="Mapa Mental">Mapa Mental</option>
+                                <option value="Ejercicios">Ejercicios</option>
+                                <option value="Otros">Otros</option>
                             </select>
                         </div>
                     </div>
@@ -81,10 +81,10 @@
                                 <thead>
                                 <tr>
                                     <th data-field="estado" data-sorteable="false" data-checkbox="true"></th>
-                                    <th data-field="nombreCol" data-sorteable="false">Nombre </th>
-                                    <th data-field="valorCol" data-sorteable="false">Valor </th>
-                                    <th data-field="tipoCol" data-sorteable="true">Tipo</th>
-                                    <th data-field="descripcionCol" data-sorteable="true">Descripción</th>
+                                    <th data-field="nombreCol" data-sorteable="false" data-editable="true">Nombre </th>
+                                    <th data-field="valorCol" data-sorteable="false" data-editable="true">Valor </th>
+                                    <th data-field="tipoCol" data-sorteable="false" >Categoría</th>
+                                    <th data-field="descripcionCol" data-sorteable="true" data-editable="true">Descripción</th>
                                 </tr>
                                 </thead>
                                 <tbody>
