Se programó la vista de calificaciones con su respectivo controlador.

--- a/views/alumno/vista-grupo-alumnos.hbs
+++ b/views/alumno/vista-grupo-alumnos.hbs
@@ -51,8 +51,8 @@
             </div>
 
         </div>
-        <div class="col">
-            <div class="container overflow-auto bg-white">
+        <div class="col col-lg col-md col-sm col-xl pre-scrollable">
+            <div class="container overflow-auto bg-white ">
                 {{#if alumno}}
                     <div class="row">
                         <div class="col">
