--- a/views/tema/tema-nuevo.hbs
+++ b/views/tema/tema-nuevo.hbs
@@ -43,7 +43,7 @@
                         </div>
                         <div class="col">
                             <label for="valorBox" class="form-label">Valor</label>
-                            <input type="number" min="1" step="1" class="form-control" value="1" name="valorBox" id="valorBox" required>
+                            <input type="number" min="1" step="1" max="100" class="form-control" value="1" name="valorBox" id="valorBox" required>
                         </div>
                         <div class="col">
                             <label for="tipoBox" class="form-label">Categoría</label>
@@ -99,4 +99,6 @@
         </div>
 
 </div>
+
+
 <script src="/js/grid-actividades-helper.js"></script>
