--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,12 +16,11 @@
     <script src="/js/bootstrap4-editable/js/bootstrap-editable.js"></script>
     <script src="/js/bootstrap-table.js"></script>
     <script src="/js/extensions/editable/bootstrap-table-editable.js"></script>
-
-
     <script src="/js/popover-helper.js"></script>
     <script src="/js/bs-custom-file-input.js"></script>
 
-    <nav class="navbar navbar-light bg-light">
+
+        <nav class="navbar navbar-light bg-light" id="navbar">
         <div class="container-fluid">
             <div class="col">
                 <a class="bi bi-house-fill" href="/" title="Inicio"></a>
@@ -33,8 +32,8 @@
 </head>
 
 <body>
-<!--Muestreo del contenido de la aplicación -->
-{{{ body }}}
-<!--Fin de muestreo del contenido de la aplicación -->
+        <!--Muestreo del contenido de la aplicación -->
+        {{{ body }}}
+        <!--Fin de muestreo del contenido de la aplicación -->
 </body>
 </html>
