--- a/views/tema/vista-grupo-temas.hbs
+++ b/views/tema/vista-grupo-temas.hbs
@@ -34,10 +34,10 @@
             <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3 p-1">
                 <div class="card" style="height:14rem;">
                     <div class="card-header d-flex flex-row-reverse">
-                        <a class="bi bi-trash-fill " align="right" href="#" data-toggle="modal"
-                           data-target="#eliminarTemaModal" title="Eliminar el tema permanentemente."></a>
-                        <a class="bi bi-pencil-square " align="right" href="#" data-toggle="modal"
-                           data-target="#editarTemaModal" title="Editar el tema."></a>
+                        <a class="bi bi-trash-fill " align="right"  data-toggle="modal"
+                           data-target="#eliminarTemaModal{{dataValues.id}}" title="Eliminar el tema permanentemente."></a>
+                        <a class="bi bi-pencil-square " align="right" data-toggle="modal"
+                           data-target="#editarTemaModal{{dataValues.id}}" title="Editar el tema."></a>
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">{{dataValues.numerotema}}. {{dataValues.nombre}}</h5>
@@ -87,7 +87,7 @@
             <form action="/tema/eliminar-tema/{{../idgrupo}}/{{dataValues.id}}?_method=DELETE" method="POST">
                 <input type="hidden" name="_method" value="DELETE">
                 <!--Modal de eliminación -->
-                <div class="modal fade" id="eliminarTemaModal" tabindex="-1" aria-labelledby="eliminarTemaModal"
+                <div class="modal fade" id="eliminarTemaModal{{dataValues.id}}" tabindex="-1" aria-labelledby="eliminarTemaModal{{dataValues.id}}"
                      aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content">
@@ -133,11 +133,51 @@
                     <div class="row justify-content-md-center align-items-center">
                         <a class="btn btn-success rounded-circle" href="/tema/nuevo-tema/{{idgrupo}}">+</a>
                     </div>
+                    <div class="row justify-content-md-center align-items-center">
+                        ó
+                    </div>
+                    <div class="row justify-content-md-center align-items-center">
+                        <a class="btn btn-primary" title="Importar temas desde un archivo." data-toggle="modal" data-target="#cargarExcel">Importar tema(s)</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
     <!-- modals -->
+    <form action="/tema/importar/{{idgrupo}}" method="POST" enctype="multipart/form-data" novalidate>
+        <div class="modal fade" id="cargarExcel" tabindex="-1" aria-labelledby="cargarExcel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="cargarExcelLabel">Importar lista</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p style="text-align:justify;">
+                            Asegúrese de que el archivo a importar ha sido descargado directamente del sistema búho, este no debe contener
+                            ninguna modificación previa y debe contar con la extensión o terminación .asp
+                        </p>
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="inputGroupFileAddon">Selección</span>
+                            </div>
+                            <div class="custom-file">
+                                <input type="file" class="custom-file-input" name="archivo" id="archivo" aria-describedby="inputGroupFileAddon" accept=".asp, .html">
+                                <label class="custom-file-label" for="inputGroupFile" data-browse="Buscar">Archivo</label>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <a type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</a>
+                        <button type="submit" class="btn btn-primary">Siguiente</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
 
 </div>
